--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
   "pylatexenc==2.10",
   "ruamel-yaml>=0.18.10",
   "pydantic-settings>=2.9.1",
-  "qsharp[widgets]",
+  "qdk[jupyter]==1.23.1.dev0",
   "pybind11-stubgen>=2.5.1",
   "h5py>=3.0.0"
 ]
