Reorganize examples into new directory setups (#312)
Co-authored-by: David Williams-Young <davidwillia@microsoft.com>
Co-authored-by: Jan Unsleber <18538155+nabbelbabbel@users.noreply.github.com>

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -252,7 +252,7 @@ jobs:
 
     - name: Test C++ installation
       run: |
-        cmake -S examples/cpp -B build_example -GNinja -DCMAKE_PREFIX_PATH=${{ github.workspace }}/install
+        cmake -S examples/language/cpp -B build_example -GNinja -DCMAKE_PREFIX_PATH=${{ github.workspace }}/install
         cmake --build build_example --target all
         echo "C++ Example Compiled with Pre-Installed QDK/Chemistry-C++ Libraries!"
 
