QDK-Chemistry Insights: Usage Tracking (#271)
Co-authored-by: alexismills <alexismills@microsoft.com>
Co-authored-by: David Williams-Young <davidwillia@microsoft.com>

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -63,6 +63,7 @@ dev = [
   "coverage",
   "mypy",
   "pytest",
+  "pytest-env",
   "ruff"
 ]
 docs = [
@@ -147,6 +148,9 @@ filterwarnings = [
   "ignore::DeprecationWarning:qiskit_aer"
 ]
 testpaths = ["tests"]
+env = [
+  "QSHARP_PYTHON_TELEMETRY=none"
+]
 
 [tool.ruff]
 line-length = 120
