--- a/.pipelines/templates/test-pip-wheels.yml
+++ b/.pipelines/templates/test-pip-wheels.yml
@@ -31,6 +31,7 @@ steps:
                                                           ${{ parameters.macBuild }} \
                                                           ${{ parameters.pyenvVersion }}
     displayName: Test wheel (Docker)
+    retryCountOnTaskFailure: 4
 
 - ${{ if eq(parameters.macBuild, 'ON') }}:
   - script: |
@@ -40,3 +41,4 @@ steps:
                                                         ${{ parameters.macBuild }} \
                                                         ${{ parameters.pyenvVersion }}
     displayName: Test wheel (native)
+    retryCountOnTaskFailure: 4
